--- a/views/index.html
+++ b/views/index.html
@@ -25,10 +25,15 @@
 
       <div class='row'>
         <div class='col-md-6'>
-          <
+
         </div>
         <div class='col-md-6'>
           <h3>Response:</h3>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col-md-6'><input type='text' class='form-control' placeholder='Authentication Token' id='token_input'></div>
+        <div class='col-md-6'>
           <div id='server-terminal'>
           </div>
           <button type="button" class="btn btn-primary" onclick='clearTerminal();' id='clear'>Clear</button>
