Added leaving game functionality

--- a/views/index.html
+++ b/views/index.html
@@ -58,6 +58,7 @@
               <ul class="list-group" id="added_users">
               </ul>
               Upload a photo: <input type='file' class='photo'><button class='btn btn-secondary' onclick='Game.create();' id='create_game' disabled='false'>Create Game</button>
+              <button class='btn btn-danger' onclick='Game.leave();' id='leave_game' disabled='false'>Leave Game</button>
             </div>
             <div class="tab-pane fade" id="joingame" role="tabpanel" aria-labelledby="joingame-tab">...</div>
             <!-- <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div> -->
