--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,10 @@
       </div>
       <div class='row'>
         <div class='col-md-6'>
-          <h5><b>Game ID: </b><span id='game-status'>Not in Game</span></h5>
+          <div id='game-info'>
+            <h5><b>Game ID: </b><span id='game-status'>Not in Game</span></h5>
+            <img id='photo'/>
+          </div>
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" id="create-game-tab" data-toggle="tab" href="#creategame" role="tab" aria-controls="creategame" aria-selected="true">Create Game</a>
@@ -57,7 +60,7 @@
               </div>
               <ul class="list-group" id="added_users">
               </ul>
-              Upload a photo: <input type='file' class='photo'><button class='btn btn-secondary' onclick='Game.create();' id='create_game' disabled='false'>Create Game</button>
+              Upload a photo: <input type='file' class='photo' id='create_photo'><button class='btn btn-secondary' onclick='Game.create();' id='create_game' disabled='false'>Create Game</button>
               <button class='btn btn-danger' onclick='Game.leave();' id='leave_game' disabled='false'>Leave Game</button>
             </div>
             <div class="tab-pane fade" id="joingame" role="tabpanel" aria-labelledby="joingame-tab">...</div>
