Added game decline functionality

--- a/views/index.html
+++ b/views/index.html
@@ -69,6 +69,7 @@
               <h3>Join Game</h3>
               <input type='text' class='form-control dark' placeholder='Game ID' id='game_id_input'>
               Upload a photo: <input type='file' class='photo' id='join_photo'>
+              <button class='btn btn-danger' id='decline_game' onclick='Game.decline();' disabled='false'>Decline Game</button>
               <button class='btn btn-secondary' id='join_game' onclick='Game.join();' disabled='false'>Join Game</button>
             </div>
             <!-- <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div> -->
